update to node-mi-flora-classic

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "homebridge": ">=0.2.0"
     },
     "dependencies" :{
-        "node-mi-flora" : "0.1.1",
-        "fakegato-history": "^0.5.2"
+        "node-mi-flora-classic-updated" : "^0.2.0",
+        "fakegato-history": ">=0.5.2"
     }
 }
